bin_PROGRAMS=fdistdump
fdistdump_SOURCES=main.c master.c master.h slave.c comm/communicatioon.h  \
		  comm/mpi/comm_mpi.c comm/mpi/comm_mpi_master.c comm/mpi/comm_mpi_slave.c \
      comm/mpi/comm_mpi.h comm/mpi/comm_mpi_master.h comm/mpi/comm_mpi_slave.h \
		  slave.h common.c common.h arg_parse.c arg_parse.h
